2005-01-16  Jorn Baayen  <jbaayen@gnome.org>

	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:
	* src/PlaylistWindow.cs:
	* src/ProgressWindow.cs:

	Replace <span weight="bold"> stuff with <b>.

2005-01-15  Jorn Baayen  <jbaayen@gnome.org>

	* TODO:
	* libmuine/metadata.c: (parse_raw_track_number),
	(assign_metadata_mp3), (assign_metadata_vorbiscomment),
	(metadata_get_track_number), (metadata_get_total_tracks):
	* libmuine/metadata.h:
	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:
	* src/AddWindow.cs:
	* src/Album.cs:
	* src/Global.cs:
	* src/Item.cs:
	* src/Metadata.cs:
	* src/Song.cs:

	Only list complete albums in albums list. An album is complete
	if the number of tracks equals the "total number of tracks" tag.
	(We are "mild"- 3 more or less will be fine too)

	The "total number of tracks" tag is the second half of the
	"track number" tag (N/TOTAL) in ID3, or the "tracktotal" tag
	in vorbiscomment.

	Use easytag 1.99.x to tag your albums like this if they aren't
	already. You can do them all at once by clicking one button.
	
	* src/ProgressWindow.cs:

	Remove "..." from window title.

	* src/CoverGetter.cs:
	* src/Global.cs:
	* src/ThreadBase.cs:

	Set "IsBackground" on all threads to true, and use Application.Quit.

2005-01-15  Jorn Baayen  <jbaayen@gnome.org>

	* src/ErrorDialog.cs:
	* src/Global.cs:
	* src/OverwriteDialog.cs:
	* src/Player.cs:
	* src/PlaylistWindow.cs:

	Improved error dialogs.

2005-01-15  Jorn Baayen  <jbaayen@gnome.org>

	* TODO:
	* data/glade/ErrorDialog.glade:
	* data/glade/Makefile.am:
	* data/glade/OverwriteDialog.glade:
	R data/glade/YesNoDialog.glade:
	* src/Makefile.am:
	* src/OverwriteDialog.cs:
	* src/SaveDialog.cs:
	R src/YesNoDialog.cs:

	Much better overwrite dialog, UI taken from ephy. Done in glade for
	now, we'll switch to using GtkMessageDialog once there is Gtk 2.6
	support in Gtk#.

2005-01-15  Jorn Baayen  <jbaayen@gnome.org>

	* src/PlaylistWindow.cs:
