@@ -207,7 +207,9 @@ signal_idle (Player *player)
   switch (data->signal)
     {
     case END_OF_STREAM:
+      priv->timer_add += floor (g_timer_elapsed (priv->timer, NULL) + 0.5);
       g_timer_stop (priv->timer);
+      g_timer_reset (priv->timer);
       g_signal_emit (player, signals[END_OF_STREAM], 0);
       break;
     }
@@ -405,6 +407,7 @@ player_open (Player     *player,
   else
     {
       g_timer_stop (priv->timer);
+      g_timer_reset (priv->timer);
       priv->timer_add = 0;
     }
   
@@ -509,6 +512,7 @@ player_pause (Player *player)
 
   priv->timer_add += floor (g_timer_elapsed (priv->timer, NULL) + 0.5);
   g_timer_stop (priv->timer);
+  g_timer_reset (priv->timer);
 }
 
 static void
@@ -588,7 +592,7 @@ player_seek (Player *player, int t)
     {
       xine_play (priv->stream, 0, t * 1000);
       
-      g_timer_start (priv->timer);
+      g_timer_reset (priv->timer);
       priv->timer_add = t;
     }
 }
